# src/route/userActivity.route.ts
@@ -5,7 +5,6 @@ import { zodValidateMiddleware } from '../middleware/validate.middleware';
 import * as UserActivityService from '../service/userActivity.service';
 import { SortEnum } from '../type/model.type';
 import { CoreError, throwAPIError } from '../util/error-handler';
-// import { userAttendSchema } from "../util/zod/userActivity.schema";
 import { activitySchema } from '../util/zod/activity.schema';
 
 const userActivityRouter = () => {
@@ -110,35 +109,6 @@ const userActivityRouter = () => {
             return throwAPIError({ res, error, statusCode: 403 });
           }
         }
-        throwAPIError({ res, error, statusCode: 400 });
-      }
-    }
-  );
-
-  router.post(
-    '/activities/:activityId/attend',
-    authorizeMiddleware,
-    // zodValidateMiddleware(userAttendSchema),
-    async (req: Request, res: Response) => {
-      /* #swagger.tags = ['Activity'] 
-          #swagger.parameters['body'] = {
-            in: 'body',
-            schema: { $ref: "#/schemas/AttendActivityCredentials" },
-          }
-      */
-
-      const userId = req.user?._id;
-      const activityId = req.params?.activityId;
-
-      try {
-        const data = await UserActivityService.attendActivity({
-          userId: new mongoose.Types.ObjectId(userId),
-          activityId: new mongoose.Types.ObjectId(activityId),
-          requestBody: req.body,
-        });
-
-        res.status(200).send(data);
-      } catch (error) {
         throwAPIError({ res, error, statusCode: 400 });
       }
     }
